bulk upload button invisible in 992 to 1168 solve

--- a/src/app/seller/pages/bulk-upload-products/bulk-upload-products.component.css
+++ b/src/app/seller/pages/bulk-upload-products/bulk-upload-products.component.css
@@ -317,6 +317,16 @@ height: 100px;
       transition: 0.3s;
       z-index: 999999999999;
     }
+    .cat-menu-close-btn {
+      display: block;
+      position: fixed;
+      left: -100px;
+      z-index: 999999999999;
+      opacity: 0;
+      -webkit-transition: 0.3s;
+      -o-transition: 0.3s;
+      transition: 0.3s;
+    }
     .cat-menu-close-btn img {
       width: 30px;
     }
